# firstyear

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
bbb/: uploaduno.sh
bbb/arduino/: Makefile  PPM.cpp  PPM.h  Wind.h  arduino.ino  reset.sh  util.h
bbb/py/: WaypointCreator  ard_int.py  controls.py  delayedbool.py  gps.py  haversine.py  main.py  motors.py  nohup.out  serial_flow.py  testard.py  testgps.py  util.py  waypoints.bak2lake
logs/: old_parse.py  parse.py
opencv/: CMakeLists.txt  test_simple.cc
scripts/: uploadmega.sh
sensor_test/: Accel.h  SerialFlow.h  Winch.h  Wind.h  controls.h  sensor_test.ino  util.h
sim/: sim.py
src/: queue-test.cc
test/: CMakeLists.txt  Makefile  README.md  rcv_msg.cc  send_msg.cc  structure.h
